rnn next draft