@@ -1,20 +1,20 @@
 package org.ml4bull.nn.layer;
 
-import com.google.common.util.concurrent.AtomicDoubleArray;
 import lombok.extern.slf4j.Slf4j;
 import org.ml4bull.algorithm.ActivationFunction;
 import org.ml4bull.algorithm.HyperbolicTangentFunction;
+import org.ml4bull.algorithm.LiniarFunction;
+import org.ml4bull.algorithm.OptimizationAlgorithm;
 import org.ml4bull.matrix.MatrixOperations;
-import org.ml4bull.nn.Neuron;
 import org.ml4bull.util.Factory;
-
-import java.util.ArrayList;
-import java.util.List;
+import org.ml4bull.util.Memory;
 
 @Slf4j
 public class RecurrentNeuronLayer extends HiddenNeuronLayer {
 
-    private List<double[]> memory = new ArrayList<>();
+    private Memory<double[]> memory = new Memory<>(3);
+    private Memory<double[]> memFeat = new Memory<>(3);
+    private HiddenNeuronLayer featureLayer;
 
     /**
      * Simple recurrent neuron net layer.
@@ -23,16 +23,20 @@ public class RecurrentNeuronLayer extends HiddenNeuronLayer {
      */
     public RecurrentNeuronLayer(int neuronsCount, ActivationFunction unused) {
         super(neuronsCount, new HyperbolicTangentFunction());
+        this.featureLayer = new HiddenNeuronLayer(neuronsCount, new LiniarFunction(), false);
         isDropoutEnabled = false;
-        memory.add(new double[neuronsCount]);
     }
 
     @Override
     public double[] forwardPropagation(double[] inValues) {
-        MatrixOperations mo = Factory.getMatrixOperations();
+        double[] featLayerOut = featureLayer.forwardPropagation(inValues);
+        memFeat.add(featLayerOut);
 
-        double[] stepOut = super.forwardPropagation(getLast());
-        double[] out = mo.sum(inValues, stepOut);
+        double[] b = enrichFeatureWithBias(getLast());
+        double[] rawResult = calculateRawResult(b);
+
+        MatrixOperations mo = Factory.getMatrixOperations();
+        double[] out = mo.sum(featLayerOut, rawResult);
 
         out = activationFunction.activate(out);
         memory.add(out);
@@ -41,26 +45,37 @@ public class RecurrentNeuronLayer extends HiddenNeuronLayer {
     }
 
     private double[] getLast() {
-        return memory.get(memory.size() - 1);
+        if (memory.size() == 0) {
+            return new double[neurons.size()];
+        }
+        return memory.getLast();
     }
 
     @Override
     public double[] backPropagation(double[] previousError) {
-        for (int i = memory.size() - 2; i <= 0 && i > -1; i--) {
+
+/*        for (int i = 1; i < memory.size(); i++) {
+            featureLayer.lastInput.set(memFeat.get(i - 1));
+            featureLayer.calculateAndSaveDeltaError(previousError);
+
             lastInput.set(memory.get(i));
             previousError = super.backPropagation(previousError);
+
         }
 
-        MatrixOperations mo = Factory.getMatrixOperations();
-        mo.scalarMultiply(previousError, 1.0 / memory.size());
-
-        for (Neuron neuron : neurons) {
-            AtomicDoubleArray weightsError = neuron.getWeightsError();
-            for (int i = 0; i < weightsError.length(); i++) {
-                weightsError.set(i, weightsError.get(i));
-            }
-        }
+        featureLayer.lastInput.set(memFeat.get(memFeat.size() - 1));
+        featureLayer.calculateAndSaveDeltaError(previousError);*/
+//        if (memFeat.size() > 1) {
+//            lastInput.set(memory.get(memory.size() - 2));
+//            previousError = super.backPropagation(previousError);
+//        }
 
         return previousError;
+    }
+
+    @Override
+    public void optimizeWeights(OptimizationAlgorithm optAlg) {
+//        featureLayer.optimizeWeights(optAlg);
+//        super.optimizeWeights(optAlg);
     }
 }
